# RegCM2HRLDAS

./: README.md
Example_regcm2hrldas/: README.md
HRLDAS_forcing_regcm/: README.md  create_forcing_prl.py  run_HRLDAS_regcm.py
Preprocess/: MANIFEST.in  README.md  pyproject.toml  setup_regcm2hrldas.sh
Preprocess/srctools/: cli.py
Preprocess/srctools/scripts/: regcm2hrldas_atm.sh  regcm2hrldas_setup.sh  regcm2hrldas_srf.sh
build_sigma/: Makefile  build_sigma.sh  sigma2p_at_hPa.F90
config/: regcm2hrldas.cfg
srctools/: interp1h.py  regcm2setupfile.py  utils.py
srctools/scripts/: regcm2hrldas_srf.sh
